# bot

./: .gitignore  .replit  admins.json  analyze_events_db.py  analyze_project.py  api_cache.json  background.py  backup.py  bot_settings.json  check_data_integrity.py  check_lepton_api.py  cleanup.py  cleanup_old_backups.py  clear_all_cache.py  clear_cache.py  code_optimizer.py  create_enhanced_report.py  create_pptx_presentation.py  create_presentation_doc.py  data_integrity_report.json  data_version.json  detailed_presentation.md  gemini_api_keys.py  get_repl_id.py  historical_events.json  install.sh  last_cleanup.txt  logs_export_1741698086.txt  main.py  optimization_log.txt  optimization_report.json  optimize_cache.py  optimize_project.py  presentation.md  project_analysis_report.json  project_presentation.md  pyproject.toml  replit.nix  requirements.txt  run_all_optimizations.py  (+13 more)
attached_assets/: Pasted-import-os-import-telegram-from-telegram-import-InlineKeyboardButton-InlineKeyboardMarkup-from-teleg-1741154787266.txt
backups/: historical_events_backup_1741442032.json
docs/: README.md  admin_panel.md  api_components.md  architecture.md  caching_system.md  database_structure.md  development_guide.md  install.sh  testing_guide.md
history_db_generator/: README.md  generator.py  mistral_generator.py  requirements.txt  russian_history_database.json
src/: __init__.py  admin_panel.py  analytics.py  api_cache.py  api_client.py  base_client.py  base_service.py  bot.py  class_diagram.py  config.py  content_service.py  conversation_service.py  data_migration.py  (+17 more)
(+357 files in other folders)
