
[project]
name = "russian-history-bot"
version = "0.1.0"
description = "Telegram bot for learning Russian history"
authors = [{"name" = "Admin"}]
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot==13.15",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "flask==2.3.3",
    "google-generativeai==0.3.1",
    "psutil==5.9.5",
]
